--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@
 <body>
   <div class="container">
     <div class="left-panel">
-      <h1> Welcome to <br/>Safeline</h1>
-      <img src="https://media.istockphoto.com/id/901677582/photo/web-safety-and-security-concept.jpg?s=612x612&w=0&k=20&c=sy1SR5WVNR9B-_r3SCs2CBeRuhVMVkSkX5YwlPV6O2U=" alt="Biodiversity" style="width: 100%; height: 100%; object-fit: cover;">
+      <h1>Welcome to <br>Safeline</h1>
+      <img src="https://media.istockphoto.com/id/901677582/photo/web-safety-and-security-concept.jpg?s=612x612&w=0&k=20&c=sy1SR5WVNR9B-_r3SCs2CBeRuhVMVkSkX5YwlPV6O2U=" alt="Security">
     </div>
     <div class="right-panel">
       <h2 id="formTitle">Login</h2>
